fix view on proposed edits when the text is too long [Finishes #155213818] (#645)

--- a/app/assets/stylesheets/proposed_edits.css.scss
+++ b/app/assets/stylesheets/proposed_edits.css.scss
@@ -35,3 +35,7 @@
 .proposed_value {
   background-color: $bootstrap-red;
 }
+
+.field_value {
+  word-wrap: break-word;
+}
